CHANGE HISTORY
--------------------------------

1.10.2 XX/XX/11

Added RA and declination for the Sun  and Moon to the Daily Almanac. Equinox and
solstice are now displayed in chronological order. Same with new and full moons.


1.10.1 03/30/11

Substitutes US Units  if a user does not specify  anything (instead of exception
KeyError).

Almanac uses default temperature and pressure if they are 'None'.

Prettied  up web  page  almanac data  in the  case  where pyephem  has not  been
installed.

Fixed up malformed CSS script weewx.css.


1.10.0 03/29/11

Added extensive almanac  information if the optional package  'pyephem' has been
installed

Added a weewx "favorite icon" favicon.ico that displays in your browser toolbar.

Added  a mobile  formatted HTML  page, courtesy  of user  Vince  Skahan (thanks,
Vince!!).

Tags can now  be ended with a unit  type to convert to a new  unit. For example,
say your pressure group ("group_pressure") has been set to show inHg. The normal
tag   notation  of   "$day.barometer.avg"  will   show  something   like  "30.05
inHg". However, the tag "$day.barometer.avg.mbar" will show "1017.5 mbar".

Added special tag  "exists" to test whether an  observation type exists. Example
"$year.foo.exists"  will  return  False  if  there  is  no  type  "foo"  in  the
statistical database.

Added special tag "has_data" to test  whether an observation type exists and has
a  non-zero number of  data points  over the  aggregation period.   For example,
"$year.soilMoist1.has_data" will return "True"  if soilMoist1 both exists in the
stats database and contains some data (meaning, you have the hardware).

Y-axis  plot  labels  (such  as  "°F")   can  now  be  overridden  in  the  plot
configuration section of skin.conf by using option "y_label".

Added executable module "runreports.py" for running report generation only.

Added package "user",  which can contain any user  extensions. This package will
not get overridden in the upgrade process.
