@@ -20,14 +20,22 @@ weewx.conf:
   smtp_host = smtp.mymailserver.com
   smtp_user = myusername
   smtp_password = mypassword
-  mailto = auser@adomain.com
+  from = me@mydomain.com
+  mailto = auser@adomain.com, another@somewhere.com
+  subject = "Alarm message from weewx!"
   
 In this example, if the outside temperature falls below 40, it will send an
-email to the recipient auser@adomain.com.
+email to the the comma separated list of 
+recipients auser@adomain.com, another@somewhere.com
 
 The example assumes that your SMTP email server is at smtp.mymailserver.com and
 that it uses secure logins. If it does not use secure logins, leave out the
 lines for smtp_user and smtp_password and no login will be attempted.
+
+Setting an email "from" is optional. If not supplied, one will be filled in, but
+your SMTP server may or may not accept it.
+
+Setting an email "subject" is optional. If not supplied, one will be filled in.
 
 To avoid a flood of emails, one will only be sent every 3600 seconds (one hour).
 
@@ -56,7 +64,7 @@ import threading
 import syslog
 
 from weewx.wxengine import StdService
-from weeutil.weeutil import timestamp_to_string
+from weeutil.weeutil import timestamp_to_string, option_as_list
 
 # Inherit from the base class StdService:
 class MyAlarm(StdService):
@@ -67,7 +75,7 @@ class MyAlarm(StdService):
         super(MyAlarm, self).__init__(engine, config_dict)
         
         # This will hold the time when the last alarm message went out:
-        self.last_msg_ts = None
+        self.last_msg_ts = 0
         
         try:
             # Dig the needed options out of the configuration dictionary.
@@ -78,11 +86,14 @@ class MyAlarm(StdService):
             self.smtp_host     = config_dict['Alarm']['smtp_host']
             self.smtp_user     = config_dict['Alarm'].get('smtp_user')
             self.smtp_password = config_dict['Alarm'].get('smtp_password')
-            self.TO            = config_dict['Alarm']['mailto']
+            self.SUBJECT       = config_dict['Alarm'].get('subject', "Alarm message from weewx")
+            self.FROM          = config_dict['Alarm'].get('from', 'alarm@weewx.com')
+            self.TO            = option_as_list(config_dict['Alarm']['mailto'])
             syslog.syslog(syslog.LOG_INFO, "alarm: Alarm set for expression: \"%s\"" % self.expression)
-        except:
+        except Exception, e:
             self.expression = None
             self.time_wait  = None
+            syslog.syslog(syslog.LOG_INFO, "alarm: No alarm set. %s" % e)
 
     def newArchivePacket(self, rec):
         # Let the super class see the record first:
@@ -110,15 +121,19 @@ class MyAlarm(StdService):
         
         # Get the time and convert to a string:
         t_str = timestamp_to_string(rec['dateTime'])
+
+        # Log it in the system log:
+        syslog.syslog(syslog.LOG_INFO, "alarm: Alarm expression \"%s\" evaluated True at %s" % (self.expression, t_str))
+
         # Form the message text:
         msg_text = "Alarm expression \"%s\" evaluated True at %s\nRecord:\n%s" % (self.expression, t_str, str(rec))
         # Convert to MIME:
         msg = MIMEText(msg_text)
         
         # Fill in MIME headers:
-        msg['Subject'] = "Alarm message from weewx"
-        msg['From']    = "weewx"
-        msg['To']      = self.TO
+        msg['Subject'] = self.SUBJECT
+        msg['From']    = self.FROM
+        msg['To']      = ','.join(self.TO)
         
         # Create an instance of class SMTP for the given SMTP host:
         s = smtplib.SMTP(self.smtp_host)
@@ -129,17 +144,65 @@ class MyAlarm(StdService):
             s.ehlo()
             s.starttls()
             s.ehlo()
+            syslog.syslog(syslog.LOG_DEBUG, "  **** using encrypted transport")
         except smtplib.SMTPException:
-            pass
-        # If a username has been given, assume that login is required for this host:
-        if self.smtp_user:
-            s.login(self.smtp_user, self.smtp_password)
-        # Send the email:
-        s.sendmail(msg['From'], [self.TO],  msg.as_string())
-        # Log out of the server:
-        s.quit()
-        # Log it in the system log:
-        syslog.syslog(syslog.LOG_INFO, "alarm: Alarm sounded for expression: \"%s\"" % self.expression)
-        syslog.syslog(syslog.LOG_INFO, "       *** email sent to: %s" % self.TO)
+            syslog.syslog(syslog.LOG_DEBUG, "  **** using unencrypted transport")
+
+        try:
+            # If a username has been given, assume that login is required for this host:
+            if self.smtp_user:
+                s.login(self.smtp_user, self.smtp_password)
+                syslog.syslog(syslog.LOG_DEBUG, "  **** logged in with user name %s" % (self.smtp_user,))
+            
+            # Send the email:
+            s.sendmail(msg['From'], self.TO,  msg.as_string())
+            # Log out of the server:
+            s.quit()
+        except Exception, e:
+            syslog.syslog(syslog.LOG_ERR, "alarm: SMTP mailer refused message with error %s" % (e,))
+            raise
         
+        # Log sending the email:
+        syslog.syslog(syslog.LOG_INFO, "  **** email sent to: %s" % self.TO)
+
+if __name__ == '__main__':
+           
+    import sys
+    import configobj
+    from optparse import OptionParser
+
+    import weewx
         
+    usage_string ="""Usage: 
+    
+    alarm.py config_path 
+    
+    Arguments:
+    
+      config_path: Path to weewx.conf"""
+    parser = OptionParser(usage=usage_string)
+    (options, args) = parser.parse_args()
+    
+    if len(args) < 1:
+        sys.stderr.write("Missing argument(s).\n")
+        sys.stderr.write(parser.parse_args(["--help"]))
+        exit()
+        
+    config_path = args[0]
+    
+    weewx.debug = 1
+    
+    try :
+        config_dict = configobj.ConfigObj(config_path, file_error=True)
+    except IOError:
+        print "Unable to open configuration file ", config_path
+        exit()
+    
+    engine = None
+    alarm = MyAlarm(engine, config_dict)
+    
+    rec = {'extraTemp1': 1.0,
+           'dateTime'  : int(time.time())}
+
+    alarm.newArchivePacket(rec)
+    
